--- a/src/scss/common/_footer.scss
+++ b/src/scss/common/_footer.scss
@@ -17,6 +17,10 @@ footer {
 					font: 18px/1 'Bebas Neue';
 					color: #222;
 					letter-spacing: 0.5px;
+
+					&:hover {
+						color: #6fd885;
+					}
 				}
 			}
 		}
@@ -38,6 +42,11 @@ footer {
 				color: #222;
 				background: #fff;
 				border: none;
+				cursor: pointer;
+
+				&:hover {
+					color: #6fd885;
+				}
 			}
 			input {
 				background: #fff;
@@ -74,6 +83,10 @@ footer {
 				a {
 					font-size: 15px;
 					color: #222;
+
+					&:hover {
+						color: #6fd885;
+					}
 				}
 			}
 		}
