--- a/src/scss/sub/_contact.scss
+++ b/src/scss/sub/_contact.scss
@@ -1,10 +1,95 @@
 .contact {
 	.inner {
-		.faqs {
-			margin-bottom: 100px;
-			min-height: 300px;
-		}
 		.location {
+			width: 100%;
+			margin-bottom: 100px;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+
+			.map_contact {
+				width: 25%;
+				height: 600px;
+				background: #444;
+				border: 15px solid #333;
+				position: relative;
+
+				.txt {
+					padding: 30px;
+					position: absolute;
+					top: 0;
+					left: 0;
+
+					h2 {
+						font: 25px/1 'Bebas Neue';
+						color: #eee;
+						letter-spacing: 1px;
+						margin-bottom: 5px;
+					}
+					span {
+						display: block;
+						font: normal 18px/1 'Smooch Sans';
+						color: #aaa;
+						margin-bottom: 30px;
+					}
+					h3 {
+						font: 20px/1 'Smooch Sans';
+						color: #eee;
+						letter-spacing: 1px;
+						margin-bottom: 10px;
+						padding-bottom: 10px;
+						border-bottom: 1px solid #555;
+					}
+					p {
+						font: 14px/1.2 'Smooch Sans';
+						color: #aaa;
+						margin-bottom: 30px;
+					}
+
+					&:nth-of-type(2),
+					&:nth-of-type(3) {
+						display: none;
+					}
+				}
+			}
+			.map_wrap {
+				width: 75%;
+
+				> ul {
+					width: 100%;
+
+					li {
+						width: 33.333%;
+						height: 40px;
+						font: 20px/40px 'Smooch Sans';
+						color: #eee;
+						background: #444;
+						border: 1px solid #eee;
+						border-right: 0;
+						float: left;
+						text-align: center;
+						cursor: pointer;
+
+						&:hover {
+							background: #bbb;
+							color: #444;
+						}
+					}
+				}
+
+				#map {
+					width: 100%;
+					height: 400px;
+
+					> div > div > div:nth-of-type(1),
+					> div > div > div:nth-of-type(2) {
+						filter: grayscale(1);
+					}
+				}
+			}
+		}
+		.faqs {
 			> div {
 				min-height: 300px;
 			}
