--- a/src/scss/sub/_contact.scss
+++ b/src/scss/sub/_contact.scss
@@ -56,7 +56,7 @@
 			.map_wrap {
 				width: 75%;
 
-				> ul {
+				.branch {
 					width: 100%;
 
 					li {
@@ -72,8 +72,7 @@
 						cursor: pointer;
 
 						&:hover {
-							background: #bbb;
-							color: #444;
+							background: #6fd885;
 						}
 					}
 				}
@@ -81,10 +80,41 @@
 				#map {
 					width: 100%;
 					height: 400px;
+					border-left: 1px solid #eee;
 
 					> div > div > div:nth-of-type(1),
 					> div > div > div:nth-of-type(2) {
 						filter: grayscale(1);
+					}
+
+					.label {
+						position: relative;
+						top: -95px;
+						left: 0;
+						background: rgba(0, 0, 0, 0.7);
+						border-radius: 5px;
+						padding: 10px;
+
+						&::after {
+							content: '';
+							display: block;
+							position: absolute;
+							bottom: -10px;
+							left: 50%;
+							transform: translateX(-50%);
+							width: 0;
+							height: 0;
+							border-top: 5px solid rgba(0, 0, 0, 0.7);
+							border-bottom: 5px solid transparent;
+							border-left: 5px solid transparent;
+							border-right: 5px solid transparent;
+						}
+
+						p {
+							font: 14px/1 'Smooch Sans';
+							color: #eee;
+							letter-spacing: 2px;
+						}
 					}
 				}
 			}
@@ -92,6 +122,33 @@
 		.faqs {
 			> div {
 				min-height: 300px;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	.contact {
+		.inner {
+			.location {
+				width: 100%;
+
+				.map_contact {
+					width: 100%;
+					margin-bottom: 20px;
+				}
+				.map_wrap {
+					width: 100%;
+
+					.branch {
+						li:nth-of-type(1) {
+							border-left: 0;
+						}
+					}
+					#map {
+						border-left: 0;
+					}
+				}
 			}
 		}
 	}
