--- a/src/scss/sub/_join.scss
+++ b/src/scss/sub/_join.scss
@@ -2,11 +2,359 @@
 	.inner {
 		.privacy {
 			margin-bottom: 100px;
-			min-height: 300px;
+
+			.wrap {
+				article {
+					width: 280px;
+					height: 380px;
+					float: left;
+					margin-right: 20px;
+					background: #fff;
+					border-top: 3px solid #222;
+					padding: 30px;
+					position: relative;
+					transition: 0.5s;
+
+					&:nth-of-type(4) {
+						margin-right: 0;
+					}
+
+					h2 {
+						font: bold 24px/1 'Smooch Sans';
+						color: #222;
+						letter-spacing: 1px;
+						margin-bottom: 20px;
+					}
+					p {
+						font: 18px/1.5 'Smooch Sans';
+						color: #222;
+					}
+					span {
+						position: absolute;
+						bottom: 30px;
+						left: 30px;
+						width: 30px;
+						height: 30px;
+						border-radius: 50%;
+						background: #6fd885;
+						font-size: 20px;
+						line-height: 30px;
+						color: #222;
+						text-align: center;
+						display: none;
+						cursor: pointer;
+					}
+
+					&:hover {
+						background: #222;
+						box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+						transform: translate(-5px, -5px);
+
+						h2 {
+							color: #eee;
+						}
+						p {
+							color: #eee;
+						}
+						span {
+							display: block;
+						}
+					}
+				}
+			}
 		}
 		.account {
-			> div {
-				min-height: 300px;
+			width: 100%;
+
+			.wrap {
+				border: 1px solid #6fd885;
+				.pic {
+					width: 40%;
+					height: 1050px;
+					float: left;
+					border: 1px solid #bbb;
+					position: relative;
+					border-right: 1px solid #6fd885;
+
+					.successTxt {
+						width: 100%;
+						height: 100%;
+						position: absolute;
+						top: 0;
+						left: 0;
+
+						&::before {
+							content: '';
+							display: block;
+							width: 80%;
+							height: 90%;
+							position: absolute;
+							top: 0;
+							left: 0;
+							margin: 10%;
+							background: rgba(111, 216, 134, 0.8);
+						}
+
+						h3 {
+							font: 28px/1 'Bebas Neue';
+							color: #eee;
+							letter-spacing: 2px;
+							position: absolute;
+							top: 50%;
+							left: 50%;
+							transform: translate(-50%, -50%);
+							text-align: center;
+							width: 100%;
+						}
+						img {
+							width: 100%;
+							height: 100%;
+							object-fit: cover;
+						}
+					}
+
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+				}
+				.form_wrap {
+					width: 60%;
+					float: left;
+					padding: 80px;
+					background: #fefefe;
+
+					h2 {
+						font: 28px/1 'Bebas Neue';
+						color: #6fd885;
+						letter-spacing: 1px;
+						margin-bottom: 20px;
+					}
+					form {
+						fieldset {
+							width: 100%;
+
+							.err {
+								display: block;
+								font: 14px/1 'Bebas Neue';
+								color: #6fd885;
+								margin-top: 10px;
+								letter-spacing: 0.5px;
+							}
+							table {
+								width: 100%;
+
+								tr {
+									height: 60px;
+
+									&:nth-of-type(5) td,
+									&:nth-of-type(6) td,
+									&:nth-of-type(7) td {
+										border-bottom: 0;
+									}
+									&:nth-of-type(8) td {
+										height: 120px;
+										border-bottom: 0;
+									}
+									&:nth-of-type(9) {
+										height: 40px;
+									}
+
+									th {
+										width: 100%;
+										height: 20px;
+										display: block;
+										text-align: left;
+										font: 13px/1 'Smooch Sans';
+										color: #bbb;
+										letter-spacing: 1px;
+
+										input[type='reset'],
+										input[type='submit'] {
+											display: block;
+											float: left;
+											width: 49%;
+											height: 40px;
+											background: #fefefe;
+											border: 1px solid #6fd885;
+											font: 16px/1 'Bebas Neue';
+											color: #6fd885;
+											letter-spacing: 2px;
+											text-align: center;
+											cursor: pointer;
+
+											&:hover {
+												background: #6fd885;
+												color: #eee;
+											}
+										}
+										input[type='reset'] {
+											margin-right: 2%;
+										}
+									}
+									td {
+										width: 100%;
+										height: 40px;
+										display: block;
+										border-bottom: 1px solid #6fd885;
+										margin-bottom: 30px;
+
+										input[type='text'],
+										input[type='password'] {
+											padding: 5px 10px 5px 2px;
+											width: 100%;
+											height: 35px;
+											border: none;
+											font: 20px/1 'Smooch Sans';
+											letter-spacing: 0.5px;
+											color: #222;
+										}
+										select {
+											padding: 5px 10px 5px 2px;
+											width: 100%;
+											height: 35px;
+											border: 1px solid #6fd885;
+											font: 18px/1 'Smooch Sans';
+											color: #222;
+										}
+										input[type='radio'],
+										input[type='checkbox'] {
+											margin-right: 5px;
+										}
+										label {
+											margin-right: 25px;
+											font: 20px/1 'Smooch Sans';
+											color: #222;
+										}
+
+										#comments {
+											padding: 10px;
+											width: 100%;
+											height: 100px;
+											background: #fefefe;
+											border: 1px solid #6fd885;
+											font: 16px/1 'Smooch Sans';
+											color: #222;
+											letter-spacing: 1px;
+											resize: none;
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	.join {
+		.inner {
+			.privacy {
+				.wrap {
+					article {
+						width: 49%;
+						margin-right: 2%;
+
+						&:nth-of-type(2) {
+							margin-right: 0;
+						}
+					}
+				}
+			}
+			.account {
+				.wrap {
+					.pic {
+						width: 100%;
+						height: 300px;
+						border-right: 0;
+						border-bottom: 1px solid #6fd885;
+
+						.successTxt {
+							&::before {
+								width: 100%;
+								height: 100%;
+								margin: 0;
+							}
+							img {
+								object-position: top center;
+							}
+						}
+
+						img {
+							object-position: top center;
+						}
+					}
+					.form_wrap {
+						width: 100%;
+						padding: 50px;
+
+						form {
+							fieldset {
+								table {
+									tr {
+										td {
+											margin-bottom: 40px;
+
+											label {
+												margin-right: 30px;
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.join {
+		.inner {
+			.privacy {
+				.wrap {
+					article {
+						width: 100%;
+						margin-right: 0;
+					}
+				}
+			}
+			.account {
+				.wrap {
+					.pic {
+						.successTxt {
+							h3 {
+								padding: 0 30px;
+							}
+						}
+					}
+					.form_wrap {
+						padding: 30px;
+
+						form {
+							fieldset {
+								table {
+									tr {
+										&:nth-of-type(6) td {
+											height: 70px;
+										}
+										td {
+											label {
+												margin-right: 38px;
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+				}
 			}
 		}
 	}
