--- a/src/scss/common/_footer.scss
+++ b/src/scss/common/_footer.scss
@@ -1,12 +1,13 @@
 footer {
 	width: 100%;
+	height: 120px;
 
-	.inner {
+	> .inner {
 		width: 1180px;
 		margin: 0 auto;
 		position: relative;
 
-		.txt {
+		> .txt {
 			margin-bottom: 20px;
 
 			li {
