--- a/src/scss/sub/_contact.scss
+++ b/src/scss/sub/_contact.scss
@@ -1,127 +1,221 @@
 .contact {
-	.inner {
-		.location {
-			width: 100%;
-			margin-bottom: 100px;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-			align-items: center;
+	.location {
+		margin-top: 100px;
+		margin-bottom: 150px;
 
-			.map_contact {
-				width: 25%;
-				height: 600px;
-				background: #444;
-				border: 15px solid #333;
-				position: relative;
+		.inner {
+			width: 1180px;
+			margin: 0 auto;
 
-				.txt {
-					padding: 30px;
-					position: absolute;
-					top: 0;
-					left: 0;
-
-					h2 {
-						font: 25px/1 'Bebas Neue';
-						color: #eee;
-						letter-spacing: 1px;
-						margin-bottom: 5px;
-					}
-					span {
-						display: block;
-						font: normal 18px/1 'Smooch Sans';
-						color: #aaa;
-						margin-bottom: 30px;
-					}
-					h3 {
-						font: 20px/1 'Smooch Sans';
-						color: #eee;
-						letter-spacing: 1px;
-						margin-bottom: 10px;
-						padding-bottom: 10px;
-						border-bottom: 1px solid #555;
-					}
-					p {
-						font: 14px/1.2 'Smooch Sans';
-						color: #aaa;
-						margin-bottom: 30px;
-					}
-
-					&:nth-of-type(2),
-					&:nth-of-type(3) {
-						display: none;
-					}
-				}
+			h1 {
+				font: normal 32px/1 'Bebas Neue';
+				color: #222;
+				letter-spacing: 2px;
+				margin-bottom: 30px;
 			}
-			.map_wrap {
-				width: 75%;
+			.location_wrap {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+				align-items: center;
+				.map_contact {
+					width: 25%;
+					height: 600px;
+					background: #444;
+					border: 15px solid #333;
+					position: relative;
 
-				.branch {
-					width: 100%;
+					.txt {
+						padding: 30px;
+						position: absolute;
+						top: 0;
+						left: 0;
 
-					li {
-						width: 33.333%;
-						height: 40px;
-						font: 20px/40px 'Smooch Sans';
-						color: #eee;
-						background: #444;
-						border: 1px solid #eee;
-						border-right: 0;
-						float: left;
-						text-align: center;
-						cursor: pointer;
+						h2 {
+							font: 25px/1 'Bebas Neue';
+							color: #eee;
+							letter-spacing: 1px;
+							margin-bottom: 5px;
+						}
+						span {
+							display: block;
+							font: normal 18px/1 'Smooch Sans';
+							color: #aaa;
+							margin-bottom: 30px;
+						}
+						h3 {
+							font: 20px/1 'Smooch Sans';
+							color: #eee;
+							letter-spacing: 1px;
+							margin-bottom: 10px;
+							padding-bottom: 10px;
+							border-bottom: 1px solid #555;
+						}
+						p {
+							font: 14px/1.2 'Smooch Sans';
+							color: #aaa;
+							margin-bottom: 30px;
+						}
 
-						&:hover {
-							background: #6fd885;
+						&:nth-of-type(2),
+						&:nth-of-type(3) {
+							display: none;
 						}
 					}
 				}
+				.map_wrap {
+					width: 75%;
 
-				#map {
-					width: 100%;
-					height: 400px;
-					border-left: 1px solid #eee;
+					.branch {
+						width: 100%;
 
-					> div > div > div:nth-of-type(1),
-					> div > div > div:nth-of-type(2) {
-						filter: grayscale(1);
+						li {
+							width: 33.333%;
+							height: 40px;
+							font: 20px/40px 'Smooch Sans';
+							color: #eee;
+							background: #444;
+							border: 1px solid #eee;
+							border-right: 0;
+							float: left;
+							text-align: center;
+							cursor: pointer;
+
+							&:hover,
+							&.on {
+								background: #6fd885;
+							}
+						}
 					}
 
-					.label {
-						position: relative;
-						top: -95px;
-						left: 0;
-						background: rgba(0, 0, 0, 0.7);
-						border-radius: 5px;
-						padding: 10px;
+					#map {
+						width: 100%;
+						height: 400px;
+						border-left: 1px solid #eee;
 
-						&::after {
-							content: '';
-							display: block;
-							position: absolute;
-							bottom: -10px;
-							left: 50%;
-							transform: translateX(-50%);
-							width: 0;
-							height: 0;
-							border-top: 5px solid rgba(0, 0, 0, 0.7);
-							border-bottom: 5px solid transparent;
-							border-left: 5px solid transparent;
-							border-right: 5px solid transparent;
+						> div > div > div:nth-of-type(1),
+						> div > div > div:nth-of-type(2) {
+							filter: grayscale(1);
 						}
 
-						p {
-							font: 14px/1 'Smooch Sans';
-							color: #eee;
-							letter-spacing: 2px;
+						.label {
+							position: relative;
+							top: -105px;
+							left: 0;
+							background: rgba(0, 0, 0, 0.8);
+							border-radius: 5px;
+							padding: 10px 20px;
+
+							&::after {
+								content: '';
+								display: block;
+								position: absolute;
+								bottom: -10px;
+								left: 50%;
+								transform: translateX(-50%);
+								width: 0;
+								height: 0;
+								border-top: 5px solid rgba(0, 0, 0, 0.8);
+								border-bottom: 5px solid transparent;
+								border-left: 5px solid transparent;
+								border-right: 5px solid transparent;
+							}
+							h2 {
+								font: bold 14px/1 'Smooch Sans';
+								color: #eee;
+								letter-spacing: 2px;
+								margin-bottom: 5px;
+								text-align: center;
+							}
+							p {
+								font: 12px/1.2 'Smooch Sans';
+								color: #eee;
+								letter-spacing: 1px;
+								text-align: center;
+							}
 						}
 					}
 				}
 			}
 		}
-		.faqs {
-			> div {
-				min-height: 300px;
+	}
+	.faqs {
+		margin-bottom: 100px;
+
+		.inner {
+			width: 1180px;
+			margin: 0 auto;
+
+			h1 {
+				font: normal 32px/1 'Bebas Neue';
+				color: #222;
+				letter-spacing: 2px;
+				margin-bottom: 30px;
+			}
+			> .wrap {
+				article {
+					float: left;
+					height: 350px;
+					padding: 30px;
+					background: #f5f5f5;
+					overflow: hidden;
+					cursor: pointer;
+					transition: 0.3s;
+
+					&:nth-of-type(1) {
+						width: 380px;
+						margin-right: 20px;
+						margin-bottom: 20px;
+					}
+					&:nth-of-type(2) {
+						width: 780px;
+						margin-bottom: 20px;
+					}
+					&:nth-of-type(3) {
+						width: 780px;
+						margin-right: 20px;
+					}
+					&:nth-of-type(4) {
+						width: 380px;
+					}
+
+					h2 {
+						font: 16px/1 'Smooch Sans';
+						color: #bbb;
+						float: right;
+					}
+					span {
+						display: block;
+						font: 60px/0.7 'Smooch Sans';
+						color: #222;
+					}
+					h3 {
+						font: normal 36px/1.2 'Bebas Neue';
+						color: #222;
+						margin: 30px 0 5px;
+						padding-top: 30px;
+						border-top: 1px solid #222;
+					}
+					p {
+						font: 14px/1.2 'Smooch Sans';
+						color: #555;
+					}
+
+					&:hover {
+						background: #6fd885;
+						transform: scale(1.02);
+
+						h2,
+						span,
+						p {
+							color: #eee;
+						}
+						h3 {
+							color: #eee;
+							border-top: 1px solid #eee;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -129,24 +223,61 @@
 
 @media screen and (max-width: $tablet) {
 	.contact {
-		.inner {
-			.location {
+		.location {
+			width: 100%;
+
+			.inner {
 				width: 100%;
+				padding: 0 30px;
 
-				.map_contact {
-					width: 100%;
-					margin-bottom: 20px;
-				}
-				.map_wrap {
-					width: 100%;
+				.location_wrap {
+					.map_contact {
+						width: 100%;
+						margin-bottom: 20px;
+					}
+					.map_wrap {
+						width: 100%;
 
-					.branch {
-						li:nth-of-type(1) {
+						.branch {
+							li:nth-of-type(1) {
+								border-left: 0;
+							}
+						}
+						#map {
 							border-left: 0;
 						}
 					}
-					#map {
-						border-left: 0;
+				}
+			}
+		}
+		.faqs {
+			.inner {
+				width: 100%;
+				padding: 0 30px;
+
+				> .wrap {
+					article {
+						height: auto;
+
+						&:nth-of-type(1) {
+							width: 100%;
+							margin-right: 0;
+						}
+						&:nth-of-type(2) {
+							width: 100%;
+						}
+						&:nth-of-type(3) {
+							width: 100%;
+							margin-right: 0;
+							margin-bottom: 20px;
+						}
+						&:nth-of-type(4) {
+							width: 100%;
+						}
+
+						h3 {
+							font-size: 30px;
+						}
 					}
 				}
 			}
